--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta property="og:title" content="Favorite Movies" />
-    <meta property="og:description" content="Archive <3" />
+    <meta property="og:description" content="Archive <3 mm" />
     <meta property="og:image" content="{{ url_for('static', filename='ogimage.png') }}" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
